import { describe, expect, it } from "vitest";

import type { HandoffViewModel } from "../../src/exploratory-testing/analysis/build-requirement-view";
import {
  RENDERER_VERSION,
  renderHandoffMarkdownV2,
} from "../../src/exploratory-testing/tools/handoff";

function createFullViewModel(): HandoffViewModel {
  return {
    title: "PR #42: Payment retry improvements",
    requirements: [
      {
        requirement: "リトライ回数がログに出力されること",
        relatedTests: ["tests/unit/payment-gateway.test.ts"],
        sourceFiles: ["src/clients/payment-gateway.ts"],
        automationCandidates: ["integration: src/clients/payment-gateway.ts"],
      },
      {
        requirement: "タイムアウト時にエラーが返ること",
        relatedTests: [],
        sourceFiles: ["src/clients/payment-gateway.ts"],
        automationCandidates: [],
      },
    ],
    testLayers: [
      {
        label: "単体テスト",
        evidence: ["tests/unit/payment-gateway.test.ts"],
      },
      {
        label: "統合テスト",
        evidence: [],
      },
    ],
    manualChecks: [
      {
        description: "clients: タイムアウト時のリトライ挙動を観察",
        reason: "タイミング依存のため自動テストで安定再現が困難",
      },
    ],
    notes: [
      "フレーキーなネットワーク環境でテストすること",
      "テストレイヤー未整備: e2e, visual",
    ],
  };
}

function createEmptyViewModel(): HandoffViewModel {
  return {
    title: "PR #99: Minor config update",
    requirements: [],
    testLayers: [],
    manualChecks: [],
    notes: [],
  };
}

describe("renderHandoffMarkdownV2 snapshots", () => {
  const prUrl = "https://github.com/owner/repo/pull/42";
  const riskAssessmentId = 1;

  it("renders full handoff with all sections populated", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toMatchSnapshot();
  });

  it("renders empty/minimal handoff with placeholder text", () => {
    const result = renderHandoffMarkdownV2(
      createEmptyViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toMatchSnapshot();
  });

  it("starts with renderer version HTML comment", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toMatch(/^<!-- rendererVersion: v2 -->/);
    expect(result).toContain(`rendererVersion: ${RENDERER_VERSION}`);
  });

  it("always renders 備考 section even when empty", () => {
    const result = renderHandoffMarkdownV2(
      createEmptyViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toContain("### 備考");
    expect(result).toContain("_特記事項なし_");
  });

  it("contains all 4 required sections", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toContain("### 実装要件");
    expect(result).toContain("### テストレイヤー");
    expect(result).toContain("### 手動確認が必要な項目");
    expect(result).toContain("### 備考");
  });

  it("renders test layer evidence as sub-items", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toContain("- 単体テスト");
    expect(result).toContain("  - `tests/unit/payment-gateway.test.ts`");
    // Layer without evidence has no sub-items
    expect(result).toContain("- 統合テスト");
  });

  it("hides risk assessment ID in HTML comment", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).toContain("<!-- riskAssessmentId: 1 -->");
    expect(result).toContain(`Generated by shiftleft-qa ${RENDERER_VERSION}`);
  });

  it("does not contain V1 format markers", () => {
    const result = renderHandoffMarkdownV2(
      createFullViewModel(),
      prUrl,
      riskAssessmentId,
    );

    expect(result).not.toContain("### Summary");
    expect(result).not.toContain("Total items:");
    expect(result).not.toContain("Already covered:");
    expect(result).not.toContain("### ✅ Already Covered");
    expect(result).not.toContain("### 🔧 Should Automate");
    expect(result).not.toContain("### 🔍 Manual Exploration Required");
    expect(result).not.toContain("**Generated**:");
    expect(result).not.toContain("**Author**:");
    expect(result).not.toContain("**Branch**:");
  });
});
