// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderHandoffMarkdownV2 snapshots > renders empty/minimal handoff with placeholder text 1`] = `
"<!-- rendererVersion: v2 -->
## QA Handoff — PR #99: Minor config update

### 実装要件

_要件情報なし_

### テストレイヤー

_該当なし_

### 手動確認が必要な項目

_手動確認不要_

### 備考

_特記事項なし_

---

<!-- riskAssessmentId: 1 -->
- PR: https://github.com/owner/repo/pull/42
- Generated by shiftleft-qa v2
"
`;

exports[`renderHandoffMarkdownV2 snapshots > renders full handoff with all sections populated 1`] = `
"<!-- rendererVersion: v2 -->
## QA Handoff — PR #42: Payment retry improvements

### 実装要件

- リトライ回数がログに出力されること
  - 関連テスト: \`tests/unit/payment-gateway.test.ts\`
  - 根拠ソース: \`src/clients/payment-gateway.ts\`
  - 自動テスト候補: \`integration: src/clients/payment-gateway.ts\`
- タイムアウト時にエラーが返ること
  - 根拠ソース: \`src/clients/payment-gateway.ts\`

### テストレイヤー

- 単体テスト
  - \`tests/unit/payment-gateway.test.ts\`
- 統合テスト

### 手動確認が必要な項目

- clients: タイムアウト時のリトライ挙動を観察 — タイミング依存のため自動テストで安定再現が困難

### 備考

- フレーキーなネットワーク環境でテストすること
- テストレイヤー未整備: e2e, visual

---

<!-- riskAssessmentId: 1 -->
- PR: https://github.com/owner/repo/pull/42
- Generated by shiftleft-qa v2
"
`;
